tests/typing/fail/emptystorage/var.act
contract LValue

constructor()

creates

    uint x := x
    
invariants

    x == 0
